DOR-847 - Add kmer encoding for chunks

--- a/dorado/modbase/CMakeLists.txt
+++ b/dorado/modbase/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(dorado_modbase STATIC
+    encode_kmer.cpp
+    encode_kmer.h
     ModBaseCaller.cpp
     ModBaseCaller.h
     ModBaseContext.cpp
