DOR-848 - New modbase model config loading

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(dorado_tests
     MathUtilsTest.cpp
     MergeHeadersTest.cpp
     Minimap2IndexTest.cpp
+    ModBaseConfigTest.cpp
     ModBaseEncoderTest.cpp
     ModelKitsTest.cpp
     ModelMetadataTest.cpp
