[INSTX-6175] Append link args rather than replacing them
We need to use extra link args when building with crashpad support so
don't replace them in the final link of the dorado executable.

Technically crashpad doesn't affect the tests, but it's good to be
consistent between the two.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -379,7 +379,7 @@ if(NOT DORADO_DISABLE_DORADO)
     )
 
     if(MSVC)
-        set_target_properties(dorado PROPERTIES LINK_OPTIONS "/ignore:4099")
+        set_property(TARGET dorado APPEND PROPERTY LINK_OPTIONS "/ignore:4099")
     endif()
 
     enable_warnings_as_errors(dorado)
