--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -527,6 +527,7 @@ build_archive:macos:x64:
     MODEL_SPEED: hac
     MODEL_VERSION: v4.2.0
     NO_TEST_DORADO_CORRECT: 0
+    NO_TEST_DUPLEX: 0
   script:
     # Do everything inside a newly created folder, since some runners only run
     # tests and hence never perform a git clean.
@@ -600,6 +601,7 @@ test:linux:arm64:bionic:
     MODEL_SPEED: hac
     MODEL_VERSION: v4.2.0
     NO_TEST_DORADO_CORRECT: 1
+    NO_TEST_DUPLEX: 1
   needs:
     - build:linux:arm64:bionic
 
@@ -631,6 +633,8 @@ test:macos:x64:
     BATCH: 0
     MODEL_SPEED: hac
     MODEL_VERSION: v4.2.0
+    NO_TEST_DORADO_CORRECT: 1
+    NO_TEST_DUPLEX: 1
   timeout: 1h 30m
 
 # Test that you can run dorado in a clean cuda 20.04 environment
