[INSTX-6790] Updated tests and test data

--- a/tests/data/barcode_demux/custom_barcodes/RPB004.toml
+++ b/tests/data/barcode_demux/custom_barcodes/RPB004.toml
@@ -1,11 +1,11 @@
 [arrangement]
 
-name = "SQK-RPB004"
+name = "CUSTOM-SQK-RPB004"
 kit = "BC"
 first_index = 1
 last_index = 12
-barcode1_pattern = "BC%02i"
-barcode2_pattern = "BC%02i"
+barcode1_pattern = "CUSTOM-BC%02i"
+barcode2_pattern = "CUSTOM-BC%02i"
 mask1_front = "CCGTGAC"
 mask1_rear = "CGTTTTTCGTGCGCCGCTTC"
 mask2_front = "CCGTGAC"
