Convert POD5 libs to a target
This may fix the centos linking issue.

--- a/dorado/data_loader/CMakeLists.txt
+++ b/dorado/data_loader/CMakeLists.txt
@@ -6,7 +6,6 @@ add_library(dorado_io_lib
 target_include_directories(dorado_io_lib
     SYSTEM
     PRIVATE
-        ${POD5_INCLUDE}
         ${DORADO_3RD_PARTY_SOURCE}/HighFive/include
 )
 
@@ -15,7 +14,7 @@ PUBLIC
     dorado_lib
 PRIVATE
     spdlog::spdlog
-    ${POD5_LIBRARIES}
+    pod5_libs
     HDF5::HDF5
     vbz_hdf_plugin
     ${ZLIB_LIBRARIES}
