--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,7 @@ add_library(dorado_lib
     dorado/polish/medaka_common.h
     dorado/polish/medaka_counts.cpp
     dorado/polish/medaka_counts.h
+    dorado/polish/sample.h
 )
 
 enable_warnings_as_errors(dorado_lib)
