Implemented the GRUModel from scratch instead of relying on the model loaded from TorchScript. This is because the loaded model had an issue with the RNN weights not being contiguous, and nothing I tried worked. Further, I enabled half-precision computation. This finally works reasonably fast, but the stitched sequence can be wrong in the end at this moment.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,8 @@ add_library(dorado_lib
     dorado/polish/medaka_common.h
     dorado/polish/medaka_counts.cpp
     dorado/polish/medaka_counts.h
+    dorado/polish/polish_models.cpp
+    dorado/polish/polish_models.h
     dorado/polish/sample.h
 )
 
