WIP. Added a feature to trim_samples to trim left and right to a specified sequence region. Work in progress because trimming now needs to be applied on specified indexes instead of the entire input samples set. Also, a sentinel for a fully trimmed window is that the start < 0 and end < 0, so this needs to be accounted for when stitching.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,7 @@ add_library(dorado_lib
     dorado/polish/medaka_counts.h
     dorado/polish/polish_models.cpp
     dorado/polish/polish_models.h
+    dorado/polish/region.h
     dorado/polish/sample.h
     dorado/polish/trim.cpp
     dorado/polish/trim.h
