--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(dorado_tests
     MathUtilsTest.cpp
     MergeHeadersTest.cpp
     Minimap2IndexTest.cpp
+    ModBaseChunkTest.cpp
     ModBaseConfigTest.cpp
     ModBaseEncoderTest.cpp
     ModelKitsTest.cpp
