Refactoring - added the decoder_factory and separated the decoder into a separate class called FeatureDecoder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -324,8 +324,12 @@ add_library(dorado_lib
     dorado/polish/trim.h
     dorado/polish/architectures/base_feature_encoder.cpp
     dorado/polish/architectures/base_feature_encoder.h
+    dorado/polish/architectures/decoder_factory.cpp
+    dorado/polish/architectures/decoder_factory.h
     dorado/polish/architectures/encoder_factory.cpp
     dorado/polish/architectures/encoder_factory.h
+    dorado/polish/architectures/feature_decoder.cpp
+    dorado/polish/architectures/feature_decoder.h
     dorado/polish/architectures/model_factory.cpp
     dorado/polish/architectures/model_factory.h
     dorado/polish/architectures/counts_feature_encoder.cpp
