--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,8 @@ add_library(dorado_lib
     dorado/polish/medaka_read_matrix.h
     dorado/polish/polish_impl.cpp
     dorado/polish/polish_impl.h
+    dorado/polish/polish_progress_tracker.cpp
+    dorado/polish/polish_progress_tracker.h
     dorado/polish/polish_utils.cpp
     dorado/polish/polish_utils.h
     dorado/polish/region.h
