Added unit tests for creating windows: tests/WindowTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(dorado_tests
     TimeUtilsTest.cpp
     TrimTest.cpp
     PafUtilsTest.cpp
+    WindowTest.cpp
 )
 if (NOT IOS)
     target_sources(dorado_tests
