implement modbase_parameters - extracts modbase releated runtime parameters into new struct. Inspects modbase configs in torch-free utils module so that setup between old and new modbase models is clean

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -38,6 +38,8 @@ add_library(dorado_utils
     memory_utils.h
     MergeHeaders.cpp
     MergeHeaders.h
+    modbase_parameters.cpp
+    modbase_parameters.h
     overlap.h
     parameters.cpp
     parameters.h
