Added the intervaltree 3rdparty code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -380,6 +380,7 @@ target_include_directories(dorado_lib
         ${DORADO_3RD_PARTY_SOURCE}/cxxpool/src
         ${DORADO_3RD_PARTY_SOURCE}/NVTX/c/include
         ${DORADO_3RD_PARTY_SOURCE}/indicators/include
+        ${DORADO_3RD_PARTY_SOURCE}/intervaltree
 )
 
 enable_testing()
